--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <div class="hero--social-links">
           <a
-            href="https://github.com/Sean2k24/Sean2k24/projects?query=is%3Aopen"
+            href="https://github.com/seanlouie24" target="_blank" 
             class="btn"
           >
             <img src="./assets/icons/icon-github.svg" alt="GitHub Icon" />
@@ -50,7 +50,7 @@
             Email
           </a>
           <a
-            href="https://www.linkedin.com/in/sean-louie-8a4a00298/"
+            href="https://www.linkedin.com/in/sean-louie-8a4a00298/" target="_blank"
             class="btn"
           >
             <img src="./assets/icons/icon-linkedin.svg" alt="Linkedin Icon" />
@@ -66,7 +66,7 @@
             <p>
               Hey there, my name is Sean Louie (he/him) and I am a computing
               science student at
-              <a target href="#" onclick='window.open("https://www.sfu.ca");return false;'> Simon Fraser University </a>
+              <a target href="https://www.sfu.ca" target="_blank"> Simon Fraser University </a>
               . I have always been facinated by technology and its potential to
               make a positive imapct on the world. My goal is to use my skills
               and knowledge to develop innovative solutions that can help
