--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
+          <!---
           <li><a href="#projects">Projects</a></li>
+        -->
           <li><a href="#contact">Contact</a></li>
           <li><a href="#" class = "btn">View Resume</a></li>
         </ul>
@@ -49,13 +51,15 @@
             <img src="./assets/icons/icon-email.svg" alt="Email Icon" />
             Email
           </a>
+          <!---
           <a
             href="https://www.linkedin.com/in/sean-louie-8a4a00298/" target="_blank"
             class="btn"
-          >
+        
             <img src="./assets/icons/icon-linkedin.svg" alt="Linkedin Icon" />
             Linkedin
           </a>
+        -->
         </div>
       </section>
 
@@ -66,15 +70,18 @@
             <p>
               Hey there, my name is Sean Louie (he/him) and I am a computing
               science student at
-              <a target href="https://www.sfu.ca" target="_blank"> Simon Fraser University </a>
+              <a target href="https://langara.ca/index.html" target="_blank"> Langara College </a>
               . I have always been facinated by technology and its potential to
               make a positive imapct on the world. My goal is to use my skills
               and knowledge to develop innovative solutions that can help
               improve people's lives! I am dedicated to building high-quality
-              products that help make the world a better place. To do this, I
+              products that help make the world a better place. 
+              <!---
+              To do this, I
               have completed
               <a href="#projects"> various projects</a>
               that solve real-world problems.
+            -->
             </p>
           </div>
           <div>
@@ -84,17 +91,19 @@
               <div>CSS</div>
               <div>JavaScript</div>
               <div>Java</div>
+              <div>Python</div>
             </div>
           </div>
         </div>
-
+<!---
         <img
-          src="./assets/Monkey.jpg"
+          src="./assets/Photo.png"
           alt="Sean Louie's
         profile image"
         />
       </section>
-
+    -->
+<!--
       <section class="content-container" id="projects">
         <h2>Projects</h2>
         <div class="project--item">
@@ -102,8 +111,7 @@
           <div class="project--item--description">
             <h3>SSSS Website v2</h3>
             <p>
-              The official website of the Software Systems Student Society
-              (SSSS). Created alongside the SSSS website commitee.
+              Coming Soon.
             </p>
             <div class="project--item--actions">
               <a href="#" class="btn"> View Project </a>
@@ -112,6 +120,7 @@
           </div>
         </div>
       </section>
+    -->
 
       <section class="content-container" id="contact">
         <h2>Get In Touch</h2>
